# curiousefficiency

./: .gitignore  .hgignore  Pipfile  README.md  bitbucket-pipelines.yml  blog-06-01-2013.xml  pyproject.toml
_archive/: bloggercom1999blog-9320223post-110439602874040740.html  bloggercom1999blog-9320223post-3096583612502871736.html  bloggercom1999blog-9320223post-4138609232470623198.html  bloggercom1999blog-9320223post-5312120290937934085.html  bloggercom1999blog-9320223post-6195217435027362498.html  bloggercom1999blog-9320223post-6919029924469068706.html  bloggercom1999blog-9320223post-7000845693574699333.html  bloggercom1999blog-9320223post-7235121623334018333.html  bloggercom1999blog-9320223post-8445269436331487344.html  bloggercom1999blog-9320223post-8793434554961462579.html  boredomandlaziness-2013-12-01T07:19:08.119834-links.csv  disqus_url_map_20131201.csv  fix-blog-layout.ipynb
ideas/: local-freebsd-testing.md  open-infrastructure-deal.md  opportunities-in-global-collaboration.rst  types-and-testing.md  ubiquitous-tools.rst
site/: Guardfile  add_theme.sh  conf.py  publish_local.sh  url_map.csv
site/pages/: about.rst  self-referential-chatgpt-full-conversation.html
site/posts/: 200411python-quirk.html  200412brain-dead-software-1-yast-online.html  200412type-checking-in-python.html  200502because-james-doesnt-remember-it.html  200504self-defeating-advertisements.html  200604ego-surfing.html  200706what-he-said.html  201001justifying-python-language-changes.html  201001status-quo-wins-stalemate.html  201012ethos.html  201012joining-modern-era-of-blogging.html  (+34 more)
(+59 files in other folders)
